<resources>
    <string name="app_name">JAM</string>
    <string name="full_app_name">Job Application Manager</string>
    <string name="user_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="signin">Sign In</string>
    <string name="update">Update Wait Time</string>
    <string name="number_pulled">Number Pulled</string>
    <string name="number_serving">Number Serving</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here!</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here!</string>
    <string name="logout">Logout</string>
    <string name="add_new_application">Add New Application</string>
    <string name="new_app">New App</string>
    <string name="company_name">Company Name</string>
    <string name="job_title">Job Title</string>
    <string name="date_applied">Date Applied</string>
    <string name="save_application">Save Application</string>
    <string name="select_status">Select Status</string>
    <string name="select_follow_up_timeframe">Select Follow Up Timeframe</string>
    <string name="application_format">Application Format</string>
    <string name="posting_url">Posting URL</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="hiring_manager_name">Hiring Manager Name</string>
    <string name="hourly_wage_if_applicable">Hourly Wage (If Applicable)</string>
    <string name="interview_date">Interview Date</string>
    <string name="new_application">New Application</string>
    <string name="required">*Required</string>
    <string name="feild_required">This field is required</string>
</resources>
